<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">If26_thikev</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">"E-mail : "</string>
    <string name="password">"password : "</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="textSubmit">Connecter</string>
	<string name="tweetit">Tweetit</string>
	<string name="copyright">Copyright</string>
	<string name="desc_copyright">bouton_copyright</string>
	<string name="timeline_text">Timeline</string>
	<string name="home_text">Home</string>
	<string name="tweet_text">Tweet</string>
	<string name="newtweet_text">New Tweet :</string>
	<string name="send_text">Send</string>
	<string name="text_empty"></string>
     
</resources>
